[gd_scene load_steps=3 format=2]

[ext_resource path="res://Music/1-music-starman.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/General/MusicPlayer.gd" type="Script" id=2]

[node name="MusicPlayer" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Main" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="Star" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 1 )
bus = "Music"

[node name="TweenOut" type="Tween" parent="."]
pause_mode = 1

[node name="TweenIn" type="Tween" parent="."]
pause_mode = 1

[connection signal="tween_completed" from="TweenOut" to="." method="_on_TweenOut_tween_completed"]
[connection signal="tween_step" from="TweenOut" to="." method="_on_TweenOut_tween_step"]
